{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "553f0b80-3a48-4378-9b8c-b94f26bd9533",
            "actions": [
                {
                    "name": "FirstFingerHold",
                    "type": "PassThrough",
                    "id": "3dd35f6c-e992-41f8-bfd5-b88ccf0f99f9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "FirstFingerDeltaPosition",
                    "type": "PassThrough",
                    "id": "a0dc1a34-ed49-4661-83ac-7d1c76fc0420",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FirstFinger2dPosition",
                    "type": "PassThrough",
                    "id": "e8a958db-22a4-4ad6-9b86-8a802a915cd0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondFingerHold",
                    "type": "PassThrough",
                    "id": "f8ba8f7b-00b6-4690-8771-9498a3a06e92",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondFingerPosition",
                    "type": "Value",
                    "id": "db59230b-3d72-42f0-aa3f-3a9757ee1ed4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondFinger2dPosition",
                    "type": "PassThrough",
                    "id": "f6776b82-c0c5-4e6e-a100-1406c6c268eb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9a2fb8ac-02c9-4985-b6fd-dbcb9cd7309e",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "FirstFingerHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3925491b-7aa0-4940-b2ac-0401225486e4",
                    "path": "<Touchscreen>/touch0/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstFingerDeltaPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9149016-8895-40ad-88bd-51bfa3f9781b",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "SecondFingerHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d3f50f2-41ea-431b-8834-9c07e8a53836",
                    "path": "<Touchscreen>/touch1/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "675a4e76-5328-4687-a886-99ea94571d5c",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstFinger2dPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9882771-30b8-43d0-9417-1af7ce368705",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondFinger2dPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}